implementado classe MonitorIntentService com o código e metodos associados para coleta evento onclick() do botao de start/rop de coleta alterado para disparar a tarefa de coleta. implementado subclasse receiver na MainActivity para receber os resultados das tarefas e setar o txtwifi para os resulytados criado um objeto em mainActivity dessa subclasse e outro objeto receiver. alterado o manifest para o novo servico MonitorIntentService TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name="br.edu.ifes.campusvitoria.monitorwifi.RefreshInformation"
+            android:name="br.edu.ifes.campusvitoria.monitorwifi.MonitorIntentService"
             android:enabled="true"
             android:exported="true"></service>
 
