corrigido mecanismo de recebimento do broadcast do MonitorIntentService. unregister no metodo onPause e register no método onResume. removido codigo do handler de mensagens. modificado contador de coletas unico para contador individual por rede coletada. app ainda precisa ficar em primeiro plano para executar coletar corretamente no android 8. nas versoes anteriores funciona em background. TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!--<receiver-->
-        <!--android:name="br.edu.ifes.campusvitoria.monitorwifi.MonitorAlarmReceiver"-->
-        <!--android:process=":remote" >-->
+        <!--android:name="br.edu.ifes.campusvitoria.monitorwifi.MainActivity$MonitorResponseReiver"-->
+        <!--android:enabled="true"-->
+        <!--android:process=":remote"-->
+        <!--android:exported="false">-->
         <!--</receiver>-->
         <service
             android:name="br.edu.ifes.campusvitoria.monitorwifi.MonitorIntentService"
