implementado metodo para controlar powermanager do telefone implementado servico WifiIntentService de varredura wifi para coletar redes ao alcance do telefone em substituicao do antigo mecanismo de coleta codificado em MonitorIntentService modificada estrutura da tabela wifi para comportar os campos timestamp, SSID, BSSID, capabilities, level, frequencia, latitude e longitude. varredura wifi em paralelo com coleta mobile remocao de arquivos nao utilizados no projeto. app ainda precisa ficar em primeiro plano para executar coletar corretamente no android 8. nas versoes anteriores funciona em background. TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="br.edu.ifes.campusvitoria.monitorwifi">
 
     <uses-feature android:name="android.hardware.location.network" />
+    <uses-feature android:name="android.hardware.screen.portrait" />
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -23,12 +25,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<receiver-->
-        <!--android:name="br.edu.ifes.campusvitoria.monitorwifi.MainActivity$MonitorResponseReiver"-->
-        <!--android:enabled="true"-->
-        <!--android:process=":remote"-->
-        <!--android:exported="false">-->
-        <!--</receiver>-->
         <service
             android:name="br.edu.ifes.campusvitoria.monitorwifi.MonitorIntentService"
             android:enabled="true"
@@ -36,24 +32,23 @@
 
         </service>
 
-        <activity android:name=".MainActivity">
+        <service
+            android:name="br.edu.ifes.campusvitoria.monitorwifi.WifiIntentService"
+            android:enabled="true"
+            android:exported="false">
+
+        </service>
+
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-        <!--android:name=".LegalNotesActivity"-->
-        <!--android:configChanges="orientation|keyboardHidden|screenSize"-->
-        <!--android:label="@string/title_activity_legal_notes"-->
-        <!--android:theme="@style/FullscreenTheme">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN" />-->
 
-        <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-        <!--</activity>-->
     </application>
 
 </manifest>
